--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: Trans2Kegg
 Type: Package
-Title: Annotate transcripts and predicted protein sequences with KEGG orthologs 
-and pathways.
+Title: Annotate transcripts and predicted protein sequences.
 Version: 0.99.0
-
 Author: Chuck Roesel
 Maintainer: Chuck Roesel <croesel@gmail.com>
-Description: Trans2Kegg accepts as input either transcript sequences or
-predicted protein sequences, along with a BLAST input file, and assigns KEGG
-orthologs and pathways.
+Description: Trans2Kegg 
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports:
     dplyr,
     tidyr,
-    KEGGREST
+    KEGGREST,
+    parallel,
+    splitstackshape,
+    data.table,
+    future
