--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,2 @@
-export("readBLAST", "init_data1", "init_data2", "init_data")
-import('KEGGREST', 'tidyr', 'splitstackshape', 'future')
+export("blastTrans", "init_data", "trimReads", "getKO")
+import('KEGGREST', 'tidyr', 'splitstackshape', 'future', 'GEOquery', 'stringr')
