Fix example data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,6 @@ import(Biostrings)
 import(KEGGREST)
 import(annotate)
 import(tidyr)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
+importFrom(utils,write.table)
