--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,18 +2,24 @@ Package: Trans2Kegg
 Type: Package
 Title: Annotate transcripts and predicted protein sequences
 Version: 0.99.0
-Author: Chuck Roesel
+Authors@R: c(
+    person("Charles", "Roesel", email = "croesel@gmail.com", role = "cre"),
+    person("Charles", "Roesel", email = "croesel@gmail.com", role = "aut"),
+    person("Steve", "Vollmer", email = "s.vollmer@northeastern.edu",
+    role = "aut")
+    )
+biocViews: Annotation, Software
 Maintainer: Chuck Roesel <croesel@gmail.com>
 Description: A tool to simplify and standardize annotation of transcriptomes.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
-    dplyr,
     tidyr,
     KEGGREST,
     Biostrings,
-    annotate
+    annotate,
+    utils
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.0
