--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import(DESeq2)
 import(KEGGREST)
 import(annotate)
 import(tidyr)
+importFrom(stats,aggregate)
 importFrom(stats,na.omit)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
