--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(annotateDE)
 export(annotateTranscripts)
 export(getPathways)
+export(mergeAnnotations)
 export(mergePaths)
 import(Biostrings)
 import(DESeq2)
 import(KEGGREST)
 import(annotate)
+import(dplyr)
 import(tidyr)
 importFrom(stats,aggregate)
 importFrom(stats,na.omit)
