--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,13 @@ export(annotateTranscripts)
 export(getPathways)
 export(mergeAnnotations)
 export(mergePaths)
-import(Biostrings)
 import(DESeq2)
 import(KEGGREST)
 import(annotate)
-import(dplyr)
+import(repmis)
 import(tidyr)
+importFrom(Biostrings,readDNAStringSet)
+importFrom(dplyr,count)
 importFrom(stats,aggregate)
 importFrom(stats,na.omit)
 importFrom(utils,read.csv)
