--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(annotateDE)
 export(annotateTranscripts)
 export(getPathways)
+export(localBlast)
 export(mergeAnnotations)
 export(mergePaths)
 import(DESeq2)
@@ -11,6 +12,7 @@ import(annotate)
 import(repmis)
 import(tidyr)
 importFrom(Biostrings,readDNAStringSet)
+importFrom(Biostrings,writeXStringSet)
 importFrom(dplyr,count)
 importFrom(stats,aggregate)
 importFrom(stats,na.omit)
