Resolve errors and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(Biostrings,readDNAStringSet)
 importFrom(Biostrings,writeXStringSet)
 importFrom(RCurl,getURL)
 importFrom(dplyr,count)
+importFrom(methods,as)
 importFrom(stats,aggregate)
 importFrom(stats,na.omit)
 importFrom(utils,URLencode)
