--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
-.gitignore
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-*.tsv
-*.err
-*.RData
-*.fa
-*.log
-*.fasta
-*.phr
-*.pin
-*.psq
-*.swp
-inst/doc
-.DS_Store
+*.*
+*Icon*
+!*.R
+!*.sh
+!*.tsv
+!*.csv
+!*.fasta
+!.gitignore
+!*.fa
+!*.Rmd
+!*.html
+!*.md
