Resolve function length note

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(annotateAws)
 export(annotateDE)
 export(annotateNCBI)
 export(getKegg)
+export(getPathDetails)
 export(getPathways)
 export(localBlast)
 export(mergeAnnotations)
